final plus image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>	
 	<Header class="logo">
-		<img class="Analog-Sea-Logo" src="https://tf-curricula-prod.s3.amazonaws.com/curricula/s1lUoigoX28V3JL7MWMR/FEWD-001/v5/assets2/1.6.2_challenge_signup_form/logo.png" alt="Analog Sea Logo">
+		<img class="Analog-Sea-Logo" src="AnalogSeaLogo.png" alt="Analog Sea Logo">
 	</header>
 	<div class="white-box">
 		<form class="Sign-up-page" action="/signup/" method="post">
